codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__session_end_hook_activity.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"before reveal:\\n{hidden}\\nrunning:\\n{running}\\ncompleted:\\n{}\",\nhook_status_frame(&chat, 80),)"
---
before reveal:
"                                                                                "
"                                                                                "
"› Ask Zuno to do anything                                                       "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                                            "
running:
"                                                                                "
"• Saving session summary                                                        "
"                                                                                "
"                                                                                "
"› Ask Zuno to do anything                                                       "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                                            "
completed:
"                                                                                "
"                                                                                "
"› Ask Zuno to do anything                                                       "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                                            "
